Created IColourPalette interface and two palettes

--- a/Fractal1/Fractal1.csproj
+++ b/Fractal1/Fractal1.csproj
@@ -65,10 +65,13 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Area.cs" />
+    <Compile Include="ColourPaletteGreyScale.cs" />
+    <Compile Include="ColourPaletteHue.cs" />
     <Compile Include="FractalMandelbrot.cs" />
     <Compile Include="HSLColor.cs" />
     <Compile Include="IArea.cs" />
     <Compile Include="ICartesian.cs" />
+    <Compile Include="IColourPalette.cs" />
     <Compile Include="IFractal.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
