Attempt to move rendering code into new Renderer class. Not looking great!

--- a/Fractal1/Fractal1.csproj
+++ b/Fractal1/Fractal1.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ColourPaletteGreyScale.cs" />
     <Compile Include="ColourPaletteHue.cs" />
     <Compile Include="FractalMandelbrot.cs" />
+    <Compile Include="FractalRenderer.cs" />
     <Compile Include="HSLColor.cs" />
     <Compile Include="IArea.cs" />
     <Compile Include="ICartesian.cs" />
